--- a/recipes/butter-chicken.html
+++ b/recipes/butter-chicken.html
@@ -1,1 +1,10 @@
-<h1>Butter Chicken</h1>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <title>Butter Chicken Recipe</title>
+    </head>
+    <body>
+        <h1>Butter Chicken</h1>
+    </body>
+</html>
