Add butter chicken image

--- a/recipes/butter-chicken.html
+++ b/recipes/butter-chicken.html
@@ -6,5 +6,6 @@
     </head>
     <body>
         <h1>Butter Chicken</h1>
+        <img src="../images/butter-chicken.jpg" alt="Delicious butter chicken">
     </body>
 </html>
