Add description of butter chicken

--- a/recipes/butter-chicken.html
+++ b/recipes/butter-chicken.html
@@ -7,5 +7,9 @@
     <body>
         <h1>Butter Chicken</h1>
         <img src="../images/butter-chicken.jpg" alt="Delicious butter chicken">
+        <h2>Description</h2>
+        <p>Butter chicken is an indian recipe which is quite similar to chicken curry but different in taste.</p>
+        <p>As the name suggests, its main ingredient is butter and that makes it a mouth-watering dish.</p>
+        
     </body>
 </html>
