Add ingredients list of butter chicken

--- a/recipes/butter-chicken.html
+++ b/recipes/butter-chicken.html
@@ -10,5 +10,19 @@
         <h2>Description</h2>
         <p>Butter chicken is an indian recipe which is quite similar to chicken curry but different in taste.</p>
         <p>As the name suggests, its main ingredient is butter and that makes it a mouth-watering dish.</p>
+        <h2>Ingredients</h2>
+        <ul>
+            <li>1 cup butter, divided</li>
+            <li>1 onion, minced</li>
+            <li>1 tablespoon minced garlic</li>
+            <li>1 (15 ounce) can tomato sauce</li>
+            <li>3 cups heavy cream</li>
+            <li>2 teaspoons salt</li>
+            <li>1 teaspoon cayenne pepper</li>
+            <li>1 teaspoon garam masala</li>
+            <li>1 ½ pounds skinless, boneless chicken breast, cut into bite-sized chunks</li>
+            <li>2 tablespoons vegetable oil</li>
+            <li>2 tablespoons tandoori masala</li>
+        </ul>
     </body>
 </html>
