--- a/recipes/butter-chicken.html
+++ b/recipes/butter-chicken.html
@@ -24,5 +24,15 @@
             <li>2 tablespoons vegetable oil</li>
             <li>2 tablespoons tandoori masala</li>
         </ul>
+        <h2>Steps</h2>
+        <ol>
+            <li>Gather all ingredients. Preheat the oven to 375 degrees F (190 degrees C).</li>
+            <li>Melt 2 tablespoons butter in a skillet over medium heat. Stir in onion and garlic, and cook slowly until the onion caramelizes to a dark brown, about 15 minutes.</li>
+            <li>Meanwhile, combine cream, tomato sauce, remaining butter, salt, cayenne pepper, and garam masala in a saucepan over medium-high heat; bring to a simmer.</li>
+            <li>Reduce heat to medium-low, cover, and simmer, stirring occasionally, for 30 minutes. Stir in caramelized onions.</li>
+            <li>While the sauce is simmering, toss chicken with vegetable oil until coated. Season with tandoori masala and spread out onto a baking sheet.</li>
+            <li>Bake chicken in the preheated oven until no longer pink in the center, about 12 minutes.</li>
+            <li>Add cooked chicken to the sauce and simmer for 5 minutes before serving.</li>
+        </ol>
     </body>
 </html>
