Add links to recipes in index.html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/butter-chicken.html">Butter Chicken</a>
+        <ul>
+            <li><a href="recipes/aloo-capsicum.html">Aloo Capsicum</a></li>
+            <li><a href="recipes/butter-chicken.html">Butter Chicken</a></li>
+            <li><a href="recipes/pesto-pasta-chicken.html">Pesto Pasta Chicken</a></li>
+        </ul>
     </body>
 </html>
